alignment issues resolved
git-svn-id: https://agiliq.unfuddle.com/svn/agiliq_zobpress@104 f7cac328-5256-41e8-ba92-3b25492a8a37

--- a/designs/frontend-xhtml/css/frontend.css
+++ b/designs/frontend-xhtml/css/frontend.css
@@ -15,7 +15,7 @@ body.frontend{background:url(../images/header_frontend_bg.gif) repeat-x; font-fa
 #frontend_searchbar .searchfield{width:230px; height:56px; float:left; padding-top:27px;}
 #frontend_searchbar .textfield{border:1px solid #C8AC84; padding:5px;}
 #frontend_searchbar .searchbutton{width:110px; height:58px; float:left; padding-top:25px;}
-#frontend_searchbar .advancedsearch{width:106px; height:83px; float:left;}
+#frontend_searchbar .advancedsearch{width:176px; height:83px; float:left;}
 .searchlink{font: bold 12px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif;line-height:83px; color:#A10000; text-decoration:none;}
 .searchlink:hover{font: bold 12px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif;line-height:83px; color:#000000; text-decoration:underline;}
 #frontend_searchbar .postjob{width:234px; height:68px; float:right; padding-top:15px; position:relative;}
