--- a/site_media/frontend/css/frontend.css
+++ b/site_media/frontend/css/frontend.css
@@ -1,16 +1,16 @@
 @charset "utf-8";
 /* CSS Document */
-body{ font:11px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif; }
-body.frontend{background:url(../images/header_frontend_bg.gif) repeat-x; font-family:"trebuchet MS",Verdana, Arial, Helvetica, sans-serif; font-size:11px; line-height:18px;}
+body{ font-family:Verdana, Arial, Helvetica, sans-serif; }
+body.frontend{background:url(../images/header_frontend_bg.gif) repeat-x; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:11px; line-height:18px;}
 
-#frontend_wrapper{width:100%; margin:0px auto; font-family:"trebuchet MS",Verdana, Arial, Helvetica, sans-serif;}
+#frontend_wrapper{width:100%; margin:0px auto; font-family:Verdana, Arial, Helvetica, sans-serif;}
 #header_frontend{ margin:0px auto; width:960px; height:90px; padding-top:25px;}
 #frontend_topnav{ margin:0px auto; width:960px; height:48px; text-align:right; font:bold 14px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif;}
 #frontend_topnav a{  text-align:right; color:#FFFFFF; font:bold 14px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif; line-height:48px; text-decoration:none; }
 #frontend_topnav a:hover{  text-align:right; color:#000000; text-decoration:underline;}
 #frontend_topnav #rssicon{  width:50px; height:48px; float:right;}
 
-#frontend_searchbar{ clear:both; margin:0px auto; width:960px; height:83px; font-family:"trebuchet MS",Verdana, Arial, Helvetica, sans-serif;}
+#frontend_searchbar{ clear:both; margin:0px auto; width:960px; height:83px; font-family:Verdana, Arial, Helvetica, sans-serif;}
 #frontend_searchbar .searchjobs{ width:106px; height:83px; float:left;font: 14px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif;line-height:83px; color:#682C00;}
 
 #frontend_searchbar .searchfield{width:230px; height:56px; float:left; padding-top:27px; padding-left:10px;}
@@ -91,20 +91,68 @@ tr#release-notes td a {color: #333;}
 .top_padding{margin-top:10px;}
 .subscribebutton{ width:81px; height:28px; background-image:url(../images/submit_btn.png); background-repeat:no-repeat; border:0px; cursor:pointer;}
 
+.redlink{ font:bold 11px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif;color:#A10000; text-decoration:none;}
+.redlink:hover{ font:bold 11px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif;color:#000000; text-decoration:underline;}
+
+.blacklink{ font:11px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif;color:#000000; text-decoration:underline;}
+.blacklink:hover{ font:11px "trebuchet MS",Verdana, Arial, Helvetica, sans-serif;color:#A10000; text-decoration:underline;}
+
+.redbadge{ font:11px Tahoma, Arial, Helvetica, sans-serif;color:#000000; text-decoration:none; background-color:#A10000; padding:1px 5px 1px 5px; color:#FFFFFF; }
+.redbadge:hover{ font:11px Tahoma, Arial, Helvetica, sans-serif;color:#FFFFFF; text-decoration:none; background-color:#000000; padding:1px 5px 1px 5px;}
 /* Post Job button fading effect */
-ul#menu {list-style:none;margin:0;padding:0;}
-/* Float LI Elements - horizontal display */
-ul#menu li {float:left;}
-/* Link - common attributes */
-ul#menu li a {background:url(../images/post_job_buttonnew.png) no-repeat ;display:block;height:51px;position:relative;}
-/* Specify width and background position attributes specifically for the class: "home" */
-ul#menu li a.home {width:234px;}
-/* Span (on hover) - common attributes */
-ul#menu li a span {background:url(../images/post_job_buttonnew.png) no-repeat;display:block;position:absolute;top:0;left:0;height:51px;width:234px;z-index:100;}
-/* Span (on hover) - display pointer */
-ul#menu li a span:hover {cursor:pointer;}
-/* Shift background position on hover for the class: "home" */
-ul#menu li a.home span {background-position:0px -51px;}
+
+
+	/* Menu Body */
+	ul#menu {
+
+		list-style:none;
+		margin:0;
+		padding:0;
+
+	}
+	
+	/* Float LI Elements - horizontal display */
+	ul#menu li {
+		float:left;
+	}
+	
+	/* Link - common attributes */
+	ul#menu li a {
+		background:url(../images/post_job_buttonnew.png) no-repeat ;
+		display:block;
+		height:51px;
+		position:relative;
+	}
+	
+	/* Specify width and background position attributes specifically for the class: "home" */
+	ul#menu li a.home {
+		width:234px;
+	}
+	
+	
+	/* Span (on hover) - common attributes */
+	ul#menu li a span {
+		background:url(../images/post_job_buttonnew.png) no-repeat;
+		display:block;
+		position:absolute;
+		top:0;
+		left:0;
+		height:51px;
+		width:234px;
+		z-index:100;
+	}
+	
+	/* Span (on hover) - display pointer */
+	ul#menu li a span:hover {
+		cursor:pointer;
+	}
+	
+	/* Shift background position on hover for the class: "home" */
+	ul#menu li a.home span {
+		background-position:0px -51px;
+	}
+	
+	
 	
 .left_padding{padding-left:20px;}
 .errortext{font:10px Arial, Helvetica, sans-serif; color:#FF0000;}
